--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
+    <script src="//code.tidio.co/jn5uc5dhg5mqfdf8uy6cautzin74ahec.js" async></script>
   </body>
 </html>
